[package]
name = "kvs"
version = "0.1.0"
authors = ["lsongzhi <lsongzhi@163.com>"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"

[dev-dependencies]
assert_cmd = "0.11.1"
predicates = "1.0.1"
