[package]
name = "kvs"
version = "0.1.0"
authors = ["lsongzhi <lsongzhi@163.com>"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "1.0"
predicates = "1.0"
tempfile = "3.1"
walkdir = "2.3"
